@@ -22,9 +22,6 @@
  */
 
 // key: compiler.err.return.before.superclass.initialized
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// options: --enable-preview -source ${jdk.version}
 
 class ReturnBeforeSuperclassInit {
     ReturnBeforeSuperclassInit(boolean maybe) {
